[package]
name = "anchored"
version = "0.1.0"
edition = "2018"
authors = ["Ruihang Xia <waynestxia@gmail.com>"]
license = "Apache-2.0"
description = "Anchored things can't cross the .await point"
repository = "https://github.com/waynexia/anchored"

[dependencies]
anchored-macros = { version = "*", path = "./anchored-macros/" }

[workspace]
members = ["anchored-macros", "macro-test"]
